// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`As developer, I can format for create mutation, Compelex data. 1`] = `
Object {
  "relation": Object {
    "create": Object {
      "scalar": "Relation Scalar Value",
    },
  },
  "relationList": Object {
    "create": Array [
      Object {
        "nestedRelation": Object {
          "connect": Object {
            "id": "5b32159b66a450c047285628",
          },
        },
        "nestedRelationList": Object {
          "create": Array [
            Object {
              "scalar": "Relation List Nested Relation List Scalar Value",
              "scalarList": Array [
                "Relation List Nested Relation List Scalar List Value",
              ],
            },
          ],
        },
        "scalar": "Relation List Scalar Value",
        "scalarList": Array [
          "Relation List Scalar List Value",
        ],
      },
    ],
  },
  "scalar": "Scalar Value",
  "scalarList": Array [
    "Scalar List Value",
  ],
}
`;

exports[`As developer, I can format for update mutation, Compelex data. 1`] = `
Object {
  "address": Object {
    "city": "Kenia Urhahn",
    "state": "Scottie Swailes",
    "street1": "Pamelia Quall",
    "street2": "Lasonya Friedly",
    "zip": "Timothy Ingleton",
  },
  "fileList": Object {
    "create": Array [
      Object {
        "fileId": "file-id",
        "filename": "Screenshot at авг. 13 15-22-49.png",
      },
    ],
    "reconnect": Array [
      Object {
        "id": "1234",
      },
    ],
  },
  "number": 1,
  "numberList": Array [
    1,
    2,
  ],
  "relation": Object {
    "create": Object {
      "scalar": "Relation Scalar Value",
    },
  },
  "relationList": Object {
    "create": Array [
      Object {
        "nestedRelation": Object {
          "reconnect": Object {
            "id": "5b32159b66a450c047285628",
          },
        },
        "nestedRelationList": Object {
          "create": Array [
            Object {
              "scalar": "Relation List Nested Relation List Scalar Value",
              "scalarList": Array [
                "Relation List Nested Relation List Scalar List Value",
              ],
            },
          ],
          "reconnect": Array [],
        },
        "scalar": "Relation List Scalar Value",
        "scalarList": Array [
          "Relation List Scalar List Value",
        ],
      },
    ],
    "reconnect": Array [],
  },
  "scalar": "Scalar Value",
  "scalarList": Array [
    "Scalar List Value",
  ],
}
`;
